--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -17,9 +17,37 @@ Read the dataset:
 covid <- read.csv("~/Desktop/spring2020/stat207/Covid-19-Bayesian-analysis/data/Covid19-04-13-20.txt")
 ```
 
+```{r}
+# create new variables: proportion of infected per county
+covid$density_cases <- covid$Total.cases / covid$Population
+
+# create new variables: rate of death per county
+covid$death_rate <- covid$Deaths / covid$Total.cases
+```
+
+```{r}
+covid
+```
+
 
 Start by describing the variability of the number of cases, $n_i$, especially as they relate to the county's population.
 
+```{r}
+# scatter plot of number of infected and population
+covid %>% ggplot(aes(x = Population/(10^6), y = Total.cases)) + 
+    geom_point() +
+    geom_text(data = covid[covid$Population > 5000000,], 
+              aes(x = Population/(10^6)-1, y = Total.cases - 250, 
+                  label = 'Los Angeles', color = 'red')) +
+    theme(legend.position = 'None') +
+    xlab('Population (million)') + 
+    ggtitle('Distirbution of COVID-19 cases vs. population')
+```
+
+```{r}
+covid %>% filter(Population < 5000000) %>% 
+    ggplot(aes(x = Population, y = Total.cases)) + geom_point()
+```
 
 
 
